--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ workflows:
     jobs:
       - path-filtering/filter:
           base-revision: main
-          config-path: .circleci/continue-config.yml
+          config-path: .circleci/continue.yml
           mapping: |
             server/.* server-changed true
             client/.* client-changed true
